<?xml version="1.0" encoding="utf-8"?>

<!-- root layout using ConstraintLayout for flexible UI positioning -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    tools:context=".MainActivity">

    <!-- title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/delicious_handrawn"
        android:text="Pawfect Match"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <!-- logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033"
        app:srcCompat="@drawable/pawfect_logo" />

    <!-- reading button -->
    <ImageButton
        android:id="@+id/reading_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/peach"
        android:contentDescription="@string/reading_button_desc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225"
        app:srcCompat="@drawable/reading" />

    <!-- painting button -->
    <ImageButton
        android:id="@+id/painting_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/peach"
        android:contentDescription="@string/painting_button_desc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/painting" />

    <!-- shared housing button -->
    <ImageButton
        android:id="@+id/sharing_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/peach"
        android:contentDescription="@string/sharing_button_desc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769"
        app:srcCompat="@drawable/shared_housing" />

    <!-- preferred hobby label -->
    <TextView
        android:id="@+id/preffered_hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/b612"
        android:text="Preferred Hobby"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <!--  hiking button  -->
    <ImageButton
        android:id="@+id/hiking_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/peach"
        android:contentDescription="@string/hiking_button_desc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769"
        app:srcCompat="@drawable/hiking" />

    <!--  living situation label  -->
    <TextView
        android:id="@+id/living_situation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/b612"
        android:text="Living Situation"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <!--  house button  -->
    <ImageButton
        android:id="@+id/house_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/peach"
        android:contentDescription="@string/house_button_desc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225"
        app:srcCompat="@drawable/house" />

    <!--  chosen text display  -->
    <TextView
        android:id="@+id/chosen_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <!--  apartment button  -->
    <ImageButton
        android:id="@+id/apartment_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/peach"
        android:contentDescription="@string/apartment_button_desc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/apartment" />

    <!--  match button  -->
    <Button
        android:id="@+id/generate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/delicious_handrawn"
        android:text="Match"
        android:textColor="@color/peach"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

</androidx.constraintlayout.widget.ConstraintLayout>